# x-translate

./: ANDROID_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  PROJECT_INDEX.md  README.md  STATUS.md  plan.md  setup-scripts.sh
android/: .gitignore  CMakeLists.txt  README.md  build.gradle.kts  gradle.properties  local.properties.template  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/xtranslate/: App.kt  MainActivity.kt
android/app/src/main/kotlin/com/xtranslate/data/model/: Entities.kt
android/app/src/main/kotlin/com/xtranslate/data/repository/: TranslationRepository.kt
android/app/src/main/kotlin/com/xtranslate/ui/screens/: TranslateScreen.kt
android/app/src/main/kotlin/com/xtranslate/ui/theme/: Theme.kt  Type.kt
android/app/src/main/kotlin/com/xtranslate/util/: ClipboardHelper.kt
android/app/src/main/kotlin/com/xtranslate/viewmodel/: TranslateViewModel.kt
android/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
android/build-logic/: build.gradle.kts
android/build-logic/src/main/kotlin/com/xtranslate/buildlogic/: AndroidConventionPlugin.kt
android/build-scripts/: build-release.sh  build.sh
android/core/: build.gradle.kts  consumer-rules.pro
android/core/src/main/cpp/include/: jni_wrapper.h  nlp_engine.h  translator.h
android/core/src/main/cpp/src/: jni_wrapper.cpp  translator.cpp
android/core/src/main/kotlin/com/xtranslate/core/jni/: NativeTranslator.kt
android/core/src/main/kotlin/com/xtranslate/core/nlp/: Models.kt
android/gradle/: libs.versions.toml
